# ms-final

./: .gitignore  LICENSE  ms-final.cabal
src/: Image.hs  Main.hs  MyRandom.hs
