name:                ms-final
version:             0.1.0.0
synopsis:            Image ETC
description:         Please see README.md
homepage:            http://github.com/lauzi/ms-final#readme
license:             BSD3
license-file:        LICENSE
author:              LauZi
maintainer:          st61112@gmail.com
copyright:           2015 LauZi
category:            Nothing
build-type:          Simple
cabal-version:       >=1.10

executable ms-final
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       vector,
                       lens,
                       bytestring,
                       array,
                       random,
                       deepseq,
                       binary
  other-modules:       MyRandom,
                       Image
